employee-k8s-yamls/06-api-deployment.yaml
# Deployment definition for the Employee API application
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employeeapi-deployment
spec:
  replicas: 4
  strategy:
    type: RollingUpdate # Enables zero-downtime rolling updates to new versions
  selector:
    matchLabels:
      app: employeeapi
  template:
    metadata:
      labels:
        app: employeeapi
    spec:
      containers:
        - name: employeeapi
          image: teambufftronics/employeeapi
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
